--- a/pages/position/position.wxss
+++ b/pages/position/position.wxss
@@ -8,7 +8,7 @@
 
 .wx-image_lDQjhT {
   width: 100%;
-  height: 230px;
+  height: 850rpx;
 }
 
 .wx-view_l4tg0N {
@@ -24,7 +24,9 @@
 
 .wx-view_7naiDV {
   display: flex;
-  margin-bottom: 5rpx;
+  margin-bottom: 10rpx;
+  justify-content: center;
+  align-items: center;
 }
 
 .wx-text_mBTXV9 {
@@ -38,9 +40,14 @@
   margin-left: 50rpx;
 }
 
-.wx-text_StQoG5 {
-  font-size: 13px;
+.wx-button_StQoG5 {
+  font-size: 22rpx;
   margin-left: 90rpx;
+  width: 300rpx;
+  height: 43rpx;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .wx-image_f7WpcD {
