修改提示语

--- a/pages/applicant/pass.wxml
+++ b/pages/applicant/pass.wxml
@@ -1,5 +1,5 @@
 <view class="wx-view_tbu0Sn">
-  <text class="wx-text_eQ8HIN">8月27日智诚人力大型招聘会</text>
+  <text class="wx-text_eQ8HIN">智诚人力大型招聘会</text>
 </view>
 <view class="wx-view_Vi82WT">
   <text class="wx-text_dc74rG">入场券</text>
